kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: praktikum-spaco
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: praktikum-spaco
  type: NodePort
